# mission-revoker

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: EXPERIMENT_PLAN.md
examples/: demo-events.jsonl
src/mission_revoker/: __init__.py  cli.py  demo.py  graph.py  io.py  models.py  reconciliation.py  report.py  revocation.py  store.py
src/mission_revoker/adapters/: __init__.py  agt.py  aps.py  otel.py
tests/: test_graph.py  test_reconciliation.py  test_revocation.py
